代码重构
1. 修改kafka version
2. 重构mapreduce demo
3. 修改hbase demo的参数